# Attendance

./: .coverage  .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  ALEMBIC_SETUP_COMPLETED.md  CHANGELOG.md  DEPLOYMENT.md  DEPLOYMENT_BT.md  DEPLOYMENT_GUIDE.md  Dockerfile  FINAL_OPTIMIZATION_SUMMARY.md  Makefile  OPTIMIZATION_COMPLETE_SUMMARY.md  OPTIMIZATION_FINAL_2024-12-04.md  OPTIMIZATION_FINAL_COMPLETE_2024-12-04.md  OPTIMIZATION_FINAL_SUMMARY.md  OPTIMIZATION_PROGRESS.md  OPTIMIZATION_UPDATE_2024-12-04.md  OPTIMIZATION_UPDATE_2024-12-04_PART2.md  QUICK_FIX_API_ERROR.md  QUICK_START_SECURITY.md  README.md  README_TESTING.md  SECURITY_OPTIMIZATION_SUMMARY.md  TODO.md  USER_MANUAL.md  UsuallyBash.md  WECHAT_MESSAGE_CONFIG.md  _auto_approve.patch  attendance.db.backup.20260410_092247  check_overtime_data.py  check_table.py  coverage.xml  docker-compose.yml  fix_overtime_status.py  init_db.py  migrate_approval_assignment.py  migrate_attendance_refactor.py  (+39 more)
alembic/: env.py
alembic/versions/: 54b3e2f554e6_initial_schema.py
backend/: TEST_ATTENDANCE_POLICY.md  WECHAT_LOGIN_SETUP.md  approval_assigner.py  check_database.py  config.py  database.py  geocode_cache.py  leave_balance.py  main.py  models.py  permissions.py  request_dedup.py  schemas.py  security.py  test_attendance_policy.py
backend/exceptions/: __init__.py  business_exceptions.py
backend/middleware/: __init__.py  rate_limit.py  (+1 more)
deploy/: DEPLOYMENT_GUIDE.md  attendance.service  fix_permissions.sh  install.sh  install_dependencies.sh  restart.sh  start.sh  status.sh  stop.sh
docs/: ERROR_HANDLING_GUIDE.md  SECURITY_FEATURES_GUIDE.md  UsuallyBash.md  alembic_setup.md
miniprogram/: DEBUG_GUIDE.md  LOGIN_TROUBLESHOOTING.md  README.md  TROUBLESHOOTING.md  WECHAT_LOGIN_API.md  app.js  app.json  app.wxss  project.config.json  project.private.config.json
tests/: conftest.py  test_api.py  test_api_security.py  test_config.py  test_exception_handler.py  test_leave_service.py  test_optimistic_lock.py  test_overtime_service.py  test_repositories.py  test_security.py  test_security_fixes.py  test_services.py  test_timezone.py  test_user_schema.py  test_utils.py
(+173 files in other folders)
